[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Rooms/Kitchen/cocina.png" type="Texture" id=1]
[ext_resource path="res://Game/DetectorHappyItem/HappyZones.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Benny/Benny.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Items/HappyItems/Hueso2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Rooms/Kitchen/Kitchen.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 550, 45 )

[node name="Kitchen" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Hueso2" parent="." instance=ExtResource( 4 )]
position = Vector2( 715, 550 )

[node name="Benny" parent="." instance=ExtResource( 3 )]
position = Vector2( 262, 507 )

[node name="Floor1" type="StaticBody2D" parent="."]
position = Vector2( 571, 758 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor1"]
position = Vector2( 166, -86 )
shape = SubResource( 1 )

[node name="HappyZones" parent="." instance=ExtResource( 2 )]
position = Vector2( 718, 534 )

[connection signal="happy_state" from="." to="Benny" method="_on_Kitchen_happy_state"]
[connection signal="body_entered" from="HappyZones" to="." method="_on_HappyZones_body_entered"]
